internal/predicate/testdata/accept/08_implements_cap.lua
count_relations(entity, 'implements') < 3
