internal/predicate/testdata/reject/wrong_arity.lua
has_role('a', 'b', 'c')
